--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 <body>
     <div id="logs"></div>
     <script>
-        $.get('check.php', function(data, status) {
-            if (data == 'yes') $('#logs').append('Connection => SUCCESS<br>(hit the GO button to start)<br><button onclick="locate()">GO</button><br>');
-            else if (data == 'done') $('#logs').append('Script executed! No need to run again.<br>If you want to re run the script, please wipe out the data by click <a href="clear.php">here</a>');
-            else $('#logs').append('Connection to database => NOT MATCH<br>Set your database username and password in "config.json" file and run again!')
+        logs = $('#logs');
+        $.get('unlocated.php', function(data, status) {
+            if (data.length > 0) {
+                logs.append(`You have ${data.length} location that not geocoded! Run script to locate them<br>`);
+                $('<button>Run script</button><br>').click(() => locate(data)).appendTo(logs);
+            } else {
+                logs.append('All location has been geocoded!');
+            }
         });
     </script>
 
@@ -26,34 +30,42 @@
             return res;
         }
 
-        function locate() {
+        function locate(data) {
+            $('<div><span id="success">0</span> SUCCESS. <span id="fail">0</span> FAILED</div>').appendTo(logs);
             apikey = 'AIzaSyDE57gE3EnuLkNqK-1A_raVkuAF5e1yQnQ';
-            $.get('query.php', function(data, status) {
-                $('#logs').append(data.length + ' records found.<br>');
-                $.each(data, function() {
-                    // var address = this.address.split('\n')[0].replace(new RegExp(' ','g'), '+');
-                    var postal_code = this.postal_code;
-                    // var find = 'https://maps.googleapis.com/maps/api/geocode/json?language=en&region=sg&components=postal_code:'+postal_code+'&address='+address+'&key='+apikey;
-                    var find = 'https://maps.googleapis.com/maps/api/geocode/json?language=en&region=sg&components=postal_code:'+postal_code+'&key='+apikey;
-                    $.get({
-                        url: find, 
-                        orgid: this.id, 
-                        success: function(data, status) {
-                            var orgid = this.orgid;
-                            var name = getDetail(data.results[0], "neighborhood");
-                            var address = data.results[0].formatted_address;
-                            var country = getDetail(data.results[0], "country");
-                            var street = getDetail(data.results[0], "route");
-                            var number = getDetail(data.results[0], "street_number");
-                            var place_id = data.results[0].place_id;
-                            var latitude = data.results[0].geometry.location.lat;
-                            var longtitude = data.results[0].geometry.location.lng;
-                            var url = 'insert.php?orgid='+orgid+'&name='+name+'&address='+address+'&country='+country+'&street='+street+'&number='+number+'&place_id='+place_id+'&latitude='+latitude+'&longtitude='+longtitude;
-                            $.get(url, function(data, status) {
-                                $('#logs').append(data + '<br>');
-                            })
+            $.each(data, function(i) {
+                // var address = this.address.split('\n')[0].replace(new RegExp(' ','g'), '+');
+                var postal_code = this.postal_code;
+                // var find = 'https://maps.googleapis.com/maps/api/geocode/json?language=en&region=sg&components=postal_code:'+postal_code+'&address='+address+'&key='+apikey;
+                var find = 'https://maps.googleapis.com/maps/api/geocode/json?language=en&region=sg&components=postal_code:'+postal_code+'&key='+apikey;
+                success = 0;
+                fail = 0;
+                $.get({
+                    url: find, 
+                    orgid: this.id, 
+                    success: function (data, status) {
+                        if (data.status == "ZERO_RESULTS") {
+                            logs.append(`${postal_code} => Not found!<br>`);
+                            fail++;
+                            $('#fail').text(fail);
+                            return;
                         }
-                    })
+                        var orgid = this.orgid;
+                        var name = getDetail(data.results[0], "neighborhood");
+                        var address = data.results[0].formatted_address;
+                        var country = getDetail(data.results[0], "country");
+                        var street = getDetail(data.results[0], "route");
+                        var number = getDetail(data.results[0], "street_number");
+                        var place_id = data.results[0].place_id;
+                        var latitude = data.results[0].geometry.location.lat;
+                        var longtitude = data.results[0].geometry.location.lng;
+                        var url = 'insert.php?orgid='+orgid+'&name='+name+'&address='+address+'&country='+country+'&street='+street+'&number='+number+'&place_id='+place_id+'&latitude='+latitude+'&longtitude='+longtitude;
+                        $.get(url, function(data, status) {
+                            logs.append(data + '<br>');
+                            success++;
+                            $('#success').text(success);
+                        })
+                    }
                 })
             })
         }
